syntax = "proto3";

package pb;

option go_package = "./pb";

message Account {
    string id = 1;
    string name = 2;
    string email = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message AccountResponse {
    Account account = 1;
}

message AuthResponse {
    string token = 1;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}

service AccountService {
    rpc LoginAccount(LoginRequest) returns (AuthResponse);
    rpc RegisterAccount(RegisterRequest) returns (AuthResponse);
    rpc GetAccount(GetAccountRequest) returns (AccountResponse);
    rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);
}